--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "ts-node webpack.config.ts",
-    "deploy": "npm run build && serverless deploy",
+    "deploy": "serverless deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,22 +12,16 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.9.1",
-    "@types/webpack": "^5.28.5",
-    "serverless-webpack": "^5.15.0",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@middy/core": "^5.5.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "middy": "^0.24.0",
     "serverless": "^4.4.11",
-    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-offline": "^14.3.4"
   }
 }
