--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "middy": "^0.24.0",
-    "serverless": "^4.4.11",
-    "serverless-offline": "^14.3.4"
+    "serverless": "^4.4.11"
   }
 }
