--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.698.0",
     "@middy/core": "^5.5.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
