--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,8 @@ provider:
   iam:
     role: ${env:AWS_LAMBDA_ROLE_ARN}
   environment:
-    NOTES_TABLE: ${env:NOTES_TABLE}
+    NOTES_TABLE: ${self:service}-${self:provider.stage}-notes
+    USERS_TABLE: ${self:service}-${self:provider.stage}-users
     JWT_SECRET: ${env:JWT_SECRET}
 
 custom:
@@ -40,3 +41,47 @@ functions:
           path: api/notes
           method: get
           cors: true
+
+  signup:
+    handler: src/handlers/signup/index.handler
+    events:
+      - http:
+          path: api/user/signup
+          method: post
+
+  login:
+    handler: src/handlers/login/index.handler
+    events:
+      - http:
+          path: api/user/login
+          method: post
+
+resources:
+  Resources:
+    UsersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:provider.environment.USERS_TABLE}
+        AttributeDefinitions:
+          - AttributeName: "email"
+            AttributeType: "S"
+        KeySchema:
+          - AttributeName: "email"
+            KeyType: "HASH"
+        BillingMode: PAY_PER_REQUEST
+
+    NotesTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:provider.environment.NOTES_TABLE}
+        AttributeDefinitions:
+          - AttributeName: "userId"
+            AttributeType: "S"
+          - AttributeName: "noteId"
+            AttributeType: "S"
+        KeySchema:
+          - AttributeName: "userId"
+            KeyType: "HASH"
+          - AttributeName: "noteId"
+            KeyType: "RANGE"
+        BillingMode: PAY_PER_REQUEST
