--- a/serverless.yml
+++ b/serverless.yml
@@ -13,25 +13,25 @@ provider:
 
 custom:
   esbuild:
-    bundle: true           # Bundlar alla beroenden i en enda fil
-    minify: true           # Minimerar koden för att minska storleken
-    sourcemap: false       # Avaktivera sourcemaps för att hålla paketet mindre
-    exclude: ['aws-sdk']   # Exkludera stora moduler som AWS SDK eftersom den redan finns i Lambda-miljön
-    target: 'node20'       # Använd den specifika Node.js-versionen för optimering
-    platform: 'node'       # Specifiera att ESBuild ska bygga för Node.js-miljö
-    concurrency: 10        # Hur många build-processer som ska köras parallellt (kan hjälpa till att snabba upp byggprocessen)
+    bundle: true
+    minify: true
+    sourcemap: false
+    exclude: ['aws-sdk']
+    target: 'node20'
+    platform: 'node'
+    concurrency: 10
 
 package:
   individually: true
   exclude:
-    - node_modules/aws-sdk/**         # AWS SDK finns redan i Lambda-miljön
-    - node_modules/typescript/**      # TypeScript behövs inte under runtime
-    - node_modules/@types/**          # Typdefinitioner behövs inte
-    - src/**/*.ts                     # TypeScript-filerna behövs inte under runtime
-    - .vscode/**                      # Redigerarinställningar
-    - .env                            # Miljövariabler ska inte inkluderas direkt
-    - tsconfig.json                   # TypeScript-konfigurationsfil behövs inte
-    - package-lock.json               # Denna behövs inte under runtime
+    - node_modules/aws-sdk/**
+    - node_modules/typescript/**
+    - node_modules/@types/**
+    - src/**/*.ts
+    - .vscode/**
+    - .env
+    - tsconfig.json
+    - package-lock.json
 
 functions:
   getNotes:
@@ -42,12 +42,36 @@ functions:
           method: get
           cors: true
 
+  getNote:
+    handler: src/handlers/getNote/index.handler
+    events:
+      - http:
+          path: api/notes/{noteId}
+          method: get
+          cors: true
+
   createNote:
     handler: src/handlers/createNote/index.handler
     events:
       - http:
           path: api/notes
           method: post
+          cors: true
+
+  updateNote:
+    handler: src/handlers/updateNote/index.handler
+    events:
+      - http:
+          path: api/notes/{noteId}
+          method: put
+          cors: true
+
+  deleteNote:
+    handler: src/handlers/deleteNote/index.handler
+    events:
+      - http:
+          path: api/notes/{noteId}
+          method: delete
           cors: true
 
   signup:
@@ -63,6 +87,7 @@ functions:
       - http:
           path: api/user/login
           method: post
+
 
 resources:
   Resources:
