--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.146",
     "@types/node": "^22.9.1",
     "typescript": "^5.6.3"
   },
@@ -22,8 +23,8 @@
     "@middy/validator": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "middy": "^0.24.0",
     "serverless": "^4.4.11"
   }
 }
